fixed moving when too much content

--- a/css/nuance.css
+++ b/css/nuance.css
@@ -16,7 +16,7 @@ h3 {font-size:24px; padding-top:3px;}
 
 sup{font-size:xx-small; vertical-align:super;} 
 sub{font-size:xx-small; vertical-align:sub;line-height:0.5;} 
-small{font-size:xx-small;}
+small{font-size:small;}
 
 p,blockquote{margin-bottom:14px;}
 blockquote {padding-left:40px; font-style:oblique; padding-top:14px; padding-bottom:14px;}
@@ -59,10 +59,10 @@ and (max-width : 600px), only screen and (max-device-width : 600px) {
 }
 
 
-.content{background-color:#fff; min-height: 100%; margin: -60px auto -82px;  position:relative; z-index:0; text-align:justify;}
+.content{background-color:#fff; min-height: 100%; margin: -62px auto -82px;   position:relative; z-index:0; text-align:justify;}
 
 .column-right{padding-left:30px; margin-left:auto; margin-right:0;}
-.column-table{width:100%; display:table; table-layout: fixed; padding-top:60px;}
+.column-table{width:100%; display:table; table-layout: fixed; padding-top:60px; padding-bottom:62px; }
 
 .content-wide,.content-narrow, .content-fill{display:table-cell; }
 .content-narrow{width:220px;}
@@ -70,10 +70,10 @@ and (max-width : 600px), only screen and (max-device-width : 600px) {
 
 @media only screen 
 and (max-width : 600px), only screen and (max-device-width : 600px) {
-	.column-table {display:block;}	
+	.column-table {display:block;padding-bottom:82px;}	
 	.content-wide,.content-narrow, .content-fill{display:block; width:100%; padding:0; margin:0;}
 }
 			
-		
 
-body>footer {height:80px; color:#1c2127; background-color:#dce1e4; position:relative; z-index:1; border-top: 2px solid #bfc8ce;}
+
+body>footer {height:80px; color:#1c2127; margin-top:0px; background-color:#dce1e4; position:relative; z-index:1; border-top: 2px solid #bfc8ce;}
